--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@ alembic==1.4.3
 astroid==2.4.2
 blinker==1.4
 click==7.1.2
+dnspython==2.0.0
 dominate==2.6.0
+email-validator==1.1.1
 Flask==1.1.2
 Flask-Bootstrap==3.3.7.1
 Flask-Login==0.5.0
@@ -12,6 +14,8 @@ Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.4
 Flask-Uploads==0.2.1
 Flask-WTF==0.14.3
+gunicorn==20.0.4
+idna==2.10
 isort==5.6.4
 itsdangerous==1.1.0
 Jinja2==2.11.2
@@ -19,7 +23,6 @@ lazy-object-proxy==1.4.3
 Mako==1.1.3
 MarkupSafe==1.1.1
 mccabe==0.6.1
-pkg-resources==0.0.0
 psycopg2==2.8.6
 pylint==2.6.0
 python-dateutil==2.8.1
